[gd_scene load_steps=7 format=3 uid="uid://cqwh48wa2xrop"]

[ext_resource type="Script" path="res://Options.gd" id="1_ho3ue"]
[ext_resource type="Script" path="res://Volume.gd" id="2_runnd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p5jmr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ignw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eyxjj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f2oqg"]

[node name="Options" type="CanvasLayer"]
layer = 20
visible = false
script = ExtResource("1_ho3ue")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 480.0
offset_top = 36.0
offset_right = 680.0
offset_bottom = 294.0
size_flags_horizontal = 4

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer3"]
layout_mode = 2

[node name="Options" type="RichTextLabel" parent="MarginContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Options[/center]
"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2

[node name="Graphics" type="Button" parent="MarginContainer/VBoxContainer3/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_p5jmr")
text = "Graphics"
flat = true

[node name="Sound" type="Button" parent="MarginContainer/VBoxContainer3/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_0ignw")
text = "Sound
"
flat = true

[node name="Other" type="Button" parent="MarginContainer/VBoxContainer3/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_eyxjj")
text = "Other
"
flat = true

[node name="SoundSettings" type="VBoxContainer" parent="MarginContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="Sound" type="RichTextLabel" parent="MarginContainer/VBoxContainer3/SoundSettings"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Sound Settings[/center]
"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer3/SoundSettings"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer3/SoundSettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="mas" type="RichTextLabel" parent="MarginContainer/VBoxContainer3/SoundSettings/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
text = "Master:
"
fit_content = true

[node name="mus" type="RichTextLabel" parent="MarginContainer/VBoxContainer3/SoundSettings/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
text = "Music:
"
fit_content = true

[node name="Sound4" type="RichTextLabel" parent="MarginContainer/VBoxContainer3/SoundSettings/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
text = "Game:
"
fit_content = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer3/SoundSettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MasterVolume" type="HSlider" parent="MarginContainer/VBoxContainer3/SoundSettings/HBoxContainer/VBoxContainer2"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("2_runnd")
bus_name = "Master"

[node name="MusicVolume" type="HSlider" parent="MarginContainer/VBoxContainer3/SoundSettings/HBoxContainer/VBoxContainer2"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.5
script = ExtResource("2_runnd")
bus_name = "Music"

[node name="gmv" type="HSlider" parent="MarginContainer/VBoxContainer3/SoundSettings/HBoxContainer/VBoxContainer2"]
layout_mode = 2
tooltip_text = "Volume
"
max_value = 1.0
step = 0.001
value = 0.5
script = ExtResource("2_runnd")
bus_name = "sfx"

[node name="GraphicSettings" type="VBoxContainer" parent="MarginContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="Other" type="VBoxContainer" parent="MarginContainer/VBoxContainer3"]
visible = false
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer3/Other"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Keybinds[/center]
"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer3/Other"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer3/Other/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer3/Other/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Jump:
"
fit_content = true

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/VBoxContainer3/Other/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Left:"
fit_content = true

[node name="RichTextLabel3" type="RichTextLabel" parent="MarginContainer/VBoxContainer3/Other/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Right:"
fit_content = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer3/Other/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer3/Other/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "W"
flat = true

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer3/Other/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "A"
flat = true

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer3/Other/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "D"
flat = true

[node name="back_opt" type="Button" parent="MarginContainer/VBoxContainer3"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_f2oqg")
text = "Back"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/Graphics" to="." method="_on_graphics_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/Other" to="." method="_on_other_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer3/back_opt" to="." method="_on_back_opt_pressed"]
